<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvhelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome"
        android:textSize="25sp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"/>


    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Self Safety"
        android:textSize="23sp"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Emergencyclick"
        android:textSize="17sp"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/Grey"/>
    <TextView
        android:id="@+id/step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Step1"
        android:textSize="17sp"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/Grey"/>
    <TextView
        android:id="@+id/step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Step2"
        android:textSize="17sp"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/Grey"/>
    <TextView
        android:id="@+id/step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Step3"
        android:textSize="17sp"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/Grey"/>
    <TextView
        android:id="@+id/step4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Step4"
        android:textSize="17sp"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/Grey"/>
    <TextView
        android:id="@+id/safe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Safety starts with YOU!"
        android:textSize="17sp"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/Grey"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Query"
        android:textSize="23sp"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:padding="10dp"
        android:text="@string/Mail"
        android:textSize="17sp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/Grey" />

   <!-- <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="10dp"
        android:text="@string/Web"
        android:textSize="17sp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/Grey"/>-->

</LinearLayout>
</ScrollView>